syntax = "proto3";

package acash;

service ACashExchange {
    rpc GetACashAssets (GetACashAssetsRequest) returns (GetACashAssetsResponse);
    rpc GetACashAssetsExchangeRate (GetACashAssetsExchangeRateRequest) returns (GetACashAssetsExchangeRateResponse);
}

message ACashAsset {
    enum Type {
        CRYPTO = 0;
        FIAT = 1;
    };

    string id = 1;
    string name = 2;
    int32 decimals = 3;

    Type type = 4;
}

message GetACashAssetsRequest {
}

message GetACashAssetsResponse {
    repeated ACashAsset acash_assets = 1;
}

message GetACashAssetsExchangeRateRequest {
    string from_acash_asset = 1;
    string to_acash_asset = 2;
}

message GetACashAssetsExchangeRateResponse {
    double rate = 1;
}

